Exploring QGIS and pkg

--- a/Optimisation_Changes/Journal of improvements.ipynb
+++ b/Optimisation_Changes/Journal of improvements.ipynb
@@ -1688,13 +1688,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-09T17:55:07.451098Z",
-     "start_time": "2025-03-09T17:55:07.440715Z"
+     "end_time": "2025-03-09T18:10:50.978970Z",
+     "start_time": "2025-03-09T18:10:50.965979Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "camera_in_projected = camera_gdf.to_crs(gdf.crs)\n",
+    "camera_in_projected = camera_gdf.to_crs(\"EPSG:32632\")\n",
     "camera_in_projected"
    ],
    "id": "fe485cd8d0ede3ca",
@@ -1728,18 +1728,18 @@
        "7348   12.143997  0.960598  0.267249 -0.076352 -0.206706  0.870557  0.446546   \n",
        "7349   12.194203  0.961112  0.266335 -0.073003 -0.207698  0.871355  0.444525   \n",
        "\n",
-       "           r31       r32       r33                  geometry  \n",
-       "0    -0.066044  0.275948  0.958901    POINT (9.91818 51.565)  \n",
-       "1    -0.063282  0.271912  0.960239    POINT (9.91818 51.565)  \n",
-       "2    -0.063171  0.272250  0.960151    POINT (9.91818 51.565)  \n",
-       "3    -0.063672  0.270396  0.960641    POINT (9.91818 51.565)  \n",
-       "4    -0.064788  0.277541  0.958527    POINT (9.91818 51.565)  \n",
-       "...        ...       ...       ...                       ...  \n",
-       "7345  0.184337 -0.407937  0.894208  POINT (9.91747 51.56448)  \n",
-       "7346  0.184227 -0.408263  0.894081  POINT (9.91747 51.56448)  \n",
-       "7347  0.184724 -0.406480  0.894791  POINT (9.91747 51.56448)  \n",
-       "7348  0.185807 -0.413169  0.891497  POINT (9.91747 51.56448)  \n",
-       "7349  0.182004 -0.412076  0.892787  POINT (9.91747 51.56448)  \n",
+       "           r31       r32       r33                        geometry  \n",
+       "0    -0.066044  0.275948  0.958901  POINT (563642.043 5713057.238)  \n",
+       "1    -0.063282  0.271912  0.960239  POINT (563642.043 5713057.238)  \n",
+       "2    -0.063171  0.272250  0.960151  POINT (563642.043 5713057.238)  \n",
+       "3    -0.063672  0.270396  0.960641  POINT (563642.043 5713057.238)  \n",
+       "4    -0.064788  0.277541  0.958527  POINT (563642.043 5713057.238)  \n",
+       "...        ...       ...       ...                             ...  \n",
+       "7345  0.184337 -0.407937  0.894208  POINT (563593.402 5712998.633)  \n",
+       "7346  0.184227 -0.408263  0.894081  POINT (563593.402 5712998.633)  \n",
+       "7347  0.184724 -0.406480  0.894791  POINT (563593.402 5712998.633)  \n",
+       "7348  0.185807 -0.413169  0.891497  POINT (563593.402 5712998.633)  \n",
+       "7349  0.182004 -0.412076  0.892787  POINT (563593.402 5712998.633)  \n",
        "\n",
        "[7350 rows x 17 columns]"
       ],
@@ -1800,7 +1800,7 @@
        "      <td>-0.066044</td>\n",
        "      <td>0.275948</td>\n",
        "      <td>0.958901</td>\n",
-       "      <td>POINT (9.91818 51.565)</td>\n",
+       "      <td>POINT (563642.043 5713057.238)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1820,7 +1820,7 @@
        "      <td>-0.063282</td>\n",
        "      <td>0.271912</td>\n",
        "      <td>0.960239</td>\n",
-       "      <td>POINT (9.91818 51.565)</td>\n",
+       "      <td>POINT (563642.043 5713057.238)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1840,7 +1840,7 @@
        "      <td>-0.063171</td>\n",
        "      <td>0.272250</td>\n",
        "      <td>0.960151</td>\n",
-       "      <td>POINT (9.91818 51.565)</td>\n",
+       "      <td>POINT (563642.043 5713057.238)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1860,7 +1860,7 @@
        "      <td>-0.063672</td>\n",
        "      <td>0.270396</td>\n",
        "      <td>0.960641</td>\n",
-       "      <td>POINT (9.91818 51.565)</td>\n",
+       "      <td>POINT (563642.043 5713057.238)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1880,7 +1880,7 @@
        "      <td>-0.064788</td>\n",
        "      <td>0.277541</td>\n",
        "      <td>0.958527</td>\n",
-       "      <td>POINT (9.91818 51.565)</td>\n",
+       "      <td>POINT (563642.043 5713057.238)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1920,7 +1920,7 @@
        "      <td>0.184337</td>\n",
        "      <td>-0.407937</td>\n",
        "      <td>0.894208</td>\n",
-       "      <td>POINT (9.91747 51.56448)</td>\n",
+       "      <td>POINT (563593.402 5712998.633)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7346</th>\n",
@@ -1940,7 +1940,7 @@
        "      <td>0.184227</td>\n",
        "      <td>-0.408263</td>\n",
        "      <td>0.894081</td>\n",
-       "      <td>POINT (9.91747 51.56448)</td>\n",
+       "      <td>POINT (563593.402 5712998.633)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7347</th>\n",
@@ -1960,7 +1960,7 @@
        "      <td>0.184724</td>\n",
        "      <td>-0.406480</td>\n",
        "      <td>0.894791</td>\n",
-       "      <td>POINT (9.91747 51.56448)</td>\n",
+       "      <td>POINT (563593.402 5712998.633)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7348</th>\n",
@@ -1980,7 +1980,7 @@
        "      <td>0.185807</td>\n",
        "      <td>-0.413169</td>\n",
        "      <td>0.891497</td>\n",
-       "      <td>POINT (9.91747 51.56448)</td>\n",
+       "      <td>POINT (563593.402 5712998.633)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7349</th>\n",
@@ -2000,7 +2000,7 @@
        "      <td>0.182004</td>\n",
        "      <td>-0.412076</td>\n",
        "      <td>0.892787</td>\n",
-       "      <td>POINT (9.91747 51.56448)</td>\n",
+       "      <td>POINT (563593.402 5712998.633)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2008,12 +2008,12 @@
        "</div>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 57
+   "execution_count": 58
   },
   {
    "metadata": {
