Eastern and norting Function fixed

--- a/Optimisation_Changes/Journal of improvements.ipynb
+++ b/Optimisation_Changes/Journal of improvements.ipynb
@@ -913,8 +913,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T11:07:39.949990Z",
-     "start_time": "2025-03-10T11:07:39.942180Z"
+     "end_time": "2025-03-11T09:57:41.519377Z",
+     "start_time": "2025-03-11T09:57:41.177036Z"
     }
    },
    "cell_type": "code",
@@ -950,15 +950,22 @@
       "4  POLYGON ((563631.70458 5713020.3033, 563632.14...  \n",
       "EPSG:4326\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR 1: PROJ: proj_create_from_database: Open of /home/mak/.conda/envs/UAV-2/share/proj failed\n"
+     ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:27:45.274268Z",
-     "start_time": "2025-03-10T10:27:45.267479Z"
+     "end_time": "2025-03-11T09:57:41.545408Z",
+     "start_time": "2025-03-11T09:57:41.535218Z"
     }
    },
    "cell_type": "code",
@@ -1244,18 +1251,18 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:27:45.779566Z",
-     "start_time": "2025-03-10T10:27:45.777669Z"
+     "end_time": "2025-03-11T09:57:41.705841Z",
+     "start_time": "2025-03-11T09:57:41.704536Z"
     }
    },
    "cell_type": "code",
@@ -1267,8 +1274,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:27:45.986235Z",
-     "start_time": "2025-03-10T10:27:45.980810Z"
+     "end_time": "2025-03-11T09:57:41.736578Z",
+     "start_time": "2025-03-11T09:57:41.733167Z"
     }
    },
    "cell_type": "code",
@@ -1318,13 +1325,13 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:27:46.252079Z",
-     "start_time": "2025-03-10T10:27:46.159960Z"
+     "end_time": "2025-03-11T09:57:41.926358Z",
+     "start_time": "2025-03-11T09:57:41.839838Z"
     }
    },
    "cell_type": "code",
@@ -1657,18 +1664,18 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:27:46.383570Z",
-     "start_time": "2025-03-10T10:27:46.365328Z"
+     "end_time": "2025-03-11T09:57:41.970571Z",
+     "start_time": "2025-03-11T09:57:41.951974Z"
     }
    },
    "cell_type": "code",
@@ -1987,18 +1994,18 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:27:46.837463Z",
-     "start_time": "2025-03-10T10:27:46.613396Z"
+     "end_time": "2025-03-11T09:57:42.494449Z",
+     "start_time": "2025-03-11T09:57:42.014918Z"
     }
    },
    "cell_type": "code",
@@ -2011,7 +2018,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2026,13 +2033,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T11:10:59.099957Z",
-     "start_time": "2025-03-10T11:10:59.031411Z"
+     "end_time": "2025-03-11T09:57:42.585665Z",
+     "start_time": "2025-03-11T09:57:42.511074Z"
     }
    },
    "cell_type": "code",
@@ -2048,7 +2055,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2063,13 +2070,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 31
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:22:35.254302095Z",
-     "start_time": "2025-03-10T08:55:44.747305Z"
+     "end_time": "2025-03-11T09:57:42.631250Z",
+     "start_time": "2025-03-11T09:57:42.629671Z"
     }
    },
    "cell_type": "code",
@@ -2087,8 +2094,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T09:00:59.966774Z",
-     "start_time": "2025-03-10T09:00:59.961966Z"
+     "end_time": "2025-03-11T10:16:33.680323Z",
+     "start_time": "2025-03-11T10:16:33.675224Z"
     }
    },
    "cell_type": "code",
@@ -2098,82 +2105,60 @@
     "def latlon_to_utm32n_series(lat_deg, lon_deg):\n",
     "    \"\"\"\n",
     "    Convert geographic coordinates (lat, lon in degrees, WGS84)\n",
-    "    to UTM Zone 32N (EPSG:32632) using series expansions.\n",
+    "    to UTM Zone 32N (EPSG:32632) using the standard UTM formulas.\n",
     "\n",
     "    Returns:\n",
     "      (easting, northing) in meters.\n",
     "    \"\"\"\n",
-    "    # WGS84 constants\n",
-    "    a = 6378137.0                     # semi-major axis\n",
-    "    f = 1 / 298.257223563             # flattening\n",
-    "    e2 = 2*f - f*f                    # eccentricity squared\n",
+    "    # WGS84 ellipsoid constants\n",
+    "    a = 6378137.0                       # semi-major axis (meters)\n",
+    "    f = 1 / 298.257223563               # flattening\n",
+    "    e2 = 2*f - f**2                     # eccentricity squared\n",
     "    e = math.sqrt(e2)\n",
     "\n",
     "    # UTM parameters for Zone 32N\n",
     "    k0 = 0.9996\n",
-    "    lambda0_deg = 9.0  # central meridian\n",
-    "    E0 = 500000.0\n",
-    "    N0 = 0.0           # for northern hemisphere\n",
+    "    E0 = 500000.0                       # false easting\n",
+    "    N0 = 0.0                            # false northing (northern hemisphere)\n",
+    "    lambda0 = math.radians(9.0)         # central meridian for Zone 32N (9°E)\n",
     "\n",
-    "    # 1) Compute n, A, alpha_i\n",
-    "    n = f / (2 - f)\n",
+    "    # Convert input latitude and longitude from degrees to radians\n",
+    "    phi = math.radians(lat_deg)\n",
+    "    lam = math.radians(lon_deg)\n",
     "\n",
-    "    # A factor (truncated series for (1 + n^2/4 + n^4/64 + ...))\n",
-    "    # We'll keep up to n^4 for typical accuracy.\n",
-    "    A_bar = (1 + (n**2)/4 + (n**4)/64)\n",
-    "    A = (a / (1 + n)) * A_bar\n",
+    "    # Compute auxiliary values\n",
+    "    N_val = a / math.sqrt(1 - e2 * math.sin(phi)**2)\n",
+    "    T = math.tan(phi)**2\n",
+    "    # Second eccentricity squared\n",
+    "    ep2 = e2 / (1 - e2)\n",
+    "    C = ep2 * math.cos(phi)**2\n",
+    "    A = (lam - lambda0) * math.cos(phi)\n",
     "\n",
-    "    # Some alpha_i expansions (truncated to 3 terms)\n",
-    "    alpha_1 = 0.5*n - (2/3)*n**2 + (37/96)*n**3\n",
-    "    alpha_2 = (1/48)*n**2 + (1/15)*n**3\n",
-    "    alpha_3 = (17/480)*n**3  # can add more if needed\n",
+    "    # Meridional arc length (M)\n",
+    "    M = a * (\n",
+    "          (1 - e2/4 - 3*e2**2/64 - 5*e2**3/256) * phi\n",
+    "        - (3*e2/8 + 3*e2**2/32 + 45*e2**3/1024) * math.sin(2*phi)\n",
+    "        + (15*e2**2/256 + 45*e2**3/1024) * math.sin(4*phi)\n",
+    "        - (35*e2**3/3072) * math.sin(6*phi)\n",
+    "    )\n",
     "\n",
-    "    # 2) Convert lat, lon to radians; shift by central meridian\n",
-    "    lat = math.radians(lat_deg)\n",
-    "    lon = math.radians(lon_deg)\n",
-    "    lambda0 = math.radians(lambda0_deg)\n",
+    "    # Calculate Easting and Northing using standard UTM series formulas\n",
+    "    easting = E0 + k0 * N_val * (\n",
+    "          A\n",
+    "        + (1 - T + C) * A**3 / 6\n",
+    "        + (5 - 18*T + T**2 + 72*C - 58*ep2) * A**5 / 120\n",
+    "    )\n",
     "\n",
-    "    # 3) Compute \"isometric latitude\" psi (one version of the formula)\n",
-    "    #   For small lat, the simpler series expansions are also used, but let's do the direct approach:\n",
-    "    #   psi = asinh(tan(lat)) - e * atanh(e * sin(lat)), etc.\n",
-    "    #   We'll use a commonly cited formula for isometric latitude:\n",
-    "    t = math.tan(math.pi/4 + lat/2)\n",
-    "    part_e = ((1 - e*math.sin(lat)) / (1 + e*math.sin(lat)))**(e/2)\n",
-    "    psi = math.log(t) - math.log(part_e)\n",
+    "    northing = N0 + k0 * (\n",
+    "          M\n",
+    "        + N_val * math.tan(phi) * (\n",
+    "              A**2 / 2\n",
+    "            + (5 - T + 9*C + 4*C**2) * A**4 / 24\n",
+    "            + (61 - 58*T + T**2 + 600*C - 330*ep2) * A**6 / 720\n",
+    "        )\n",
+    "    )\n",
     "\n",
-    "    # 4) xi' and eta'\n",
-    "    #   Delta lambda\n",
-    "    dlon = lon - lambda0\n",
-    "\n",
-    "    xi_prime = math.atan2(math.sinh(psi), math.cos(dlon))\n",
-    "    eta_prime = math.atanh(math.sin(dlon) / math.cosh(psi))\n",
-    "\n",
-    "    # 5) Apply the alpha_i sums for x, y\n",
-    "    def sincosh_sum(i):\n",
-    "        # sin(2 i xi'), cosh(2 i eta')\n",
-    "        return math.sin(2*i*xi_prime) * math.cosh(2*i*eta_prime)\n",
-    "\n",
-    "    def sinsinh_sum(i):\n",
-    "        # sin(2 i xi'), sinh(2 i eta')\n",
-    "        return math.sin(2*i*xi_prime) * math.sinh(2*i*eta_prime)\n",
-    "\n",
-    "    # Summation for x (eta') and y (xi')\n",
-    "    # x = k0 * A [ eta' + Σ alpha_i sin(2 i xi') cosh(2 i eta') ] + E0\n",
-    "    # y = k0 * A [ xi' + Σ alpha_i sin(2 i xi') sinh(2 i eta') ] + N0\n",
-    "\n",
-    "    # We'll just sum up i=1..3 for demonstration:\n",
-    "    sum_x = (alpha_1 * sincosh_sum(1)\n",
-    "           + alpha_2 * sincosh_sum(2)\n",
-    "           + alpha_3 * sincosh_sum(3))\n",
-    "\n",
-    "    sum_y = (alpha_1 * sinsinh_sum(1)\n",
-    "           + alpha_2 * sinsinh_sum(2)\n",
-    "           + alpha_3 * sinsinh_sum(3))\n",
-    "\n",
-    "    x = E0 + k0 * A * (eta_prime + sum_x)\n",
-    "    y = N0 + k0 * A * (xi_prime + sum_y)\n",
-    "\n",
-    "    return (x, y)\n",
+    "    return easting, northing\n",
     "\n",
     "\n",
     "# Test the function with a known point\n",
@@ -2193,17 +2178,17 @@
      "output_type": "stream",
      "text": [
       "Latitude: 51.56495263945027, Longitude: 9.91819787101646\n",
-      "Easting: 568330.87 m, Northing: 5749506.81 m\n"
+      "Easting: 563643.38 m, Northing: 5713052.28 m\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T11:28:57.237176Z",
-     "start_time": "2025-03-10T11:28:57.194568Z"
+     "end_time": "2025-03-11T10:16:34.672835Z",
+     "start_time": "2025-03-11T10:16:34.628101Z"
     }
    },
    "cell_type": "code",
@@ -2212,9 +2197,12 @@
     "print(polygon)\n",
     "print(gdf[\"geometry\"][0])\n",
     "i=0\n",
+    "\n",
     "for point in camera_in_projected[\"geometry\"]:\n",
     "    if polygon.contains(point):\n",
+    "        print(point)\n",
     "        print(camera_in_projected[\"PhotoID\"][i])\n",
+    "\n",
     "    i = i + 1\n",
     "\n",
     "\n"
@@ -2226,58 +2214,195 @@
      "output_type": "stream",
      "text": [
       "POLYGON ((563629.9438435122 5713009.647797464, 563630.3840281036 5713012.311673874, 563622.4910609632 5713013.615924513, 563622.0508763719 5713010.952048103, 563629.9438435122 5713009.647797464))\n",
+      "POLYGON ((563629.9438435122 5713009.647797464, 563630.3840281036 5713012.311673874, 563622.4910609632 5713013.615924513, 563622.0508763719 5713010.952048103, 563629.9438435122 5713009.647797464))\n",
+      "POINT (563627.2209894974 5713010.794463492)\n",
       "IMG_0079_1\n",
+      "POINT (563627.2209894974 5713010.794463492)\n",
       "IMG_0079_2\n",
+      "POINT (563627.2209894974 5713010.794463492)\n",
       "IMG_0079_3\n",
+      "POINT (563627.2209894974 5713010.794463492)\n",
       "IMG_0079_4\n",
+      "POINT (563627.2209894974 5713010.794463492)\n",
       "IMG_0079_5\n",
+      "POINT (563627.2209894974 5713010.794463492)\n",
       "IMG_0079_6\n",
+      "POINT (563623.5304544726 5713011.87892115)\n",
       "IMG_0087_1\n",
+      "POINT (563623.5304544726 5713011.87892115)\n",
       "IMG_0087_2\n",
+      "POINT (563623.5304544726 5713011.87892115)\n",
       "IMG_0087_3\n",
+      "POINT (563623.5304544726 5713011.87892115)\n",
       "IMG_0087_4\n",
+      "POINT (563623.5304544726 5713011.87892115)\n",
       "IMG_0087_5\n",
+      "POINT (563623.5304544726 5713011.87892115)\n",
       "IMG_0087_6\n",
+      "POINT (563628.4316551683 5713010.377099151)\n",
       "IMG_0116_1\n",
+      "POINT (563628.4316551683 5713010.377099151)\n",
       "IMG_0116_2\n",
+      "POINT (563628.4316551683 5713010.377099151)\n",
       "IMG_0116_3\n",
+      "POINT (563628.4316551683 5713010.377099151)\n",
       "IMG_0116_4\n",
+      "POINT (563628.4316551683 5713010.377099151)\n",
       "IMG_0116_5\n",
+      "POINT (563628.4316551683 5713010.377099151)\n",
       "IMG_0116_6\n",
+      "POINT (563624.7303163477 5713010.560441109)\n",
       "IMG_0158_1\n",
+      "POINT (563624.7303163477 5713010.560441109)\n",
       "IMG_0158_2\n",
+      "POINT (563624.7303163477 5713010.560441109)\n",
       "IMG_0158_3\n",
+      "POINT (563624.7303163477 5713010.560441109)\n",
       "IMG_0158_4\n",
+      "POINT (563624.7303163477 5713010.560441109)\n",
       "IMG_0158_5\n",
+      "POINT (563624.7303163477 5713010.560441109)\n",
       "IMG_0158_6\n",
+      "POINT (563623.5801728186 5713012.739453033)\n",
       "IMG_0271_1\n",
+      "POINT (563623.5801728186 5713012.739453033)\n",
       "IMG_0271_2\n",
+      "POINT (563623.5801728186 5713012.739453033)\n",
       "IMG_0271_3\n",
+      "POINT (563623.5801728186 5713012.739453033)\n",
       "IMG_0271_4\n",
+      "POINT (563623.5801728186 5713012.739453033)\n",
       "IMG_0271_5\n",
+      "POINT (563623.5801728186 5713012.739453033)\n",
       "IMG_0271_6\n",
+      "POINT (563630.0735097831 5713010.717249535)\n",
       "IMG_0280_1\n",
+      "POINT (563630.0735097831 5713010.717249535)\n",
       "IMG_0280_2\n",
+      "POINT (563630.0735097831 5713010.717249535)\n",
       "IMG_0280_3\n",
+      "POINT (563630.0735097831 5713010.717249535)\n",
       "IMG_0280_4\n",
+      "POINT (563630.0735097831 5713010.717249535)\n",
       "IMG_0280_5\n",
+      "POINT (563630.0735097831 5713010.717249535)\n",
       "IMG_0280_6\n",
+      "POINT (563629.370934174 5713010.259720966)\n",
       "IMG_0450_1\n",
+      "POINT (563629.370934174 5713010.259720966)\n",
       "IMG_0450_2\n",
+      "POINT (563629.370934174 5713010.259720966)\n",
       "IMG_0450_3\n",
+      "POINT (563629.370934174 5713010.259720966)\n",
       "IMG_0450_4\n",
+      "POINT (563629.370934174 5713010.259720966)\n",
       "IMG_0450_5\n",
+      "POINT (563629.370934174 5713010.259720966)\n",
       "IMG_0450_6\n",
+      "POINT (563624.7903331417 5713012.5079978155)\n",
       "IMG_0467_1\n",
+      "POINT (563624.7903331417 5713012.5079978155)\n",
       "IMG_0467_2\n",
+      "POINT (563624.7903331417 5713012.5079978155)\n",
       "IMG_0467_3\n",
+      "POINT (563624.7903331417 5713012.5079978155)\n",
       "IMG_0467_4\n",
+      "POINT (563624.7903331417 5713012.5079978155)\n",
       "IMG_0467_5\n",
+      "POINT (563624.7903331417 5713012.5079978155)\n",
       "IMG_0467_6\n"
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-11T10:17:09.184796Z",
+     "start_time": "2025-03-11T10:17:09.062007Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "polygon = gdf[\"geometry\"][5]\n",
+    "for i in range(len(camera_df)):\n",
+    "    point = Point(latlon_to_utm32n_series(camera_df[\"Y\"][i], camera_df[\"X\"][i]))\n",
+    "   #print(f\"function point {camera_in_projected[\"geometry\"][i]} Library poinT: {point}  \" )\n",
+    "    if polygon.contains(point):\n",
+    "        print(camera_df[\"PhotoID\"][i])\n"
+   ],
+   "id": "d81ecad7c8b8a5bd",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMG_0049_1\n",
+      "IMG_0049_2\n",
+      "IMG_0049_3\n",
+      "IMG_0049_4\n",
+      "IMG_0049_5\n",
+      "IMG_0049_6\n",
+      "IMG_0072_1\n",
+      "IMG_0072_2\n",
+      "IMG_0072_3\n",
+      "IMG_0072_4\n",
+      "IMG_0072_5\n",
+      "IMG_0072_6\n",
+      "IMG_0073_1\n",
+      "IMG_0073_2\n",
+      "IMG_0073_3\n",
+      "IMG_0073_4\n",
+      "IMG_0073_5\n",
+      "IMG_0073_6\n",
+      "IMG_0104_1\n",
+      "IMG_0104_2\n",
+      "IMG_0104_3\n",
+      "IMG_0104_4\n",
+      "IMG_0104_5\n",
+      "IMG_0104_6\n",
+      "IMG_0190_1\n",
+      "IMG_0190_2\n",
+      "IMG_0190_3\n",
+      "IMG_0190_4\n",
+      "IMG_0190_5\n",
+      "IMG_0190_6\n",
+      "IMG_0191_1\n",
+      "IMG_0191_2\n",
+      "IMG_0191_3\n",
+      "IMG_0191_4\n",
+      "IMG_0191_5\n",
+      "IMG_0191_6\n",
+      "IMG_0192_1\n",
+      "IMG_0192_2\n",
+      "IMG_0192_3\n",
+      "IMG_0192_4\n",
+      "IMG_0192_5\n",
+      "IMG_0192_6\n",
+      "IMG_0424_1\n",
+      "IMG_0424_2\n",
+      "IMG_0424_3\n",
+      "IMG_0424_4\n",
+      "IMG_0424_5\n",
+      "IMG_0424_6\n"
+     ]
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-11T10:16:35.168984Z",
+     "start_time": "2025-03-11T10:16:35.167580Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "ad8bbcca2efd5ac5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -2285,7 +2410,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "d81ecad7c8b8a5bd"
+   "id": "74764739a0cdf5e5"
   }
  ],
  "metadata": {
