Work in progress for the pixel isolation

--- a/Optimisation_Changes/Journal of improvements.ipynb
+++ b/Optimisation_Changes/Journal of improvements.ipynb
@@ -799,8 +799,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T10:09:21.318863Z",
-     "start_time": "2025-03-10T10:09:20.955756Z"
+     "end_time": "2025-03-11T11:22:57.538216Z",
+     "start_time": "2025-03-11T11:22:57.533265Z"
     }
    },
    "cell_type": "code",
@@ -808,34 +808,44 @@
     "import polars as pl\n",
     "\n",
     "# Path to the Parquet file\n",
-    "file_path = r\"/run/media/mak/OS/example_data_week8/output/extract/20241029_week8_project_0_IMG_0000_1.tif.parquet\"\n",
+    "file_path = r\"/run/media/mak/OS/example_data_week8/output/extract/20241029_week8_project_6_IMG_0396_1.tif.parquet\"\n",
     "\n",
     "# Load the Parquet file into a Polars DataFrame\n",
     "df = pl.read_parquet(file_path)\n",
     "\n",
     "# Display the first few rows\n",
-    "print(df.head(2))\n",
-    "print(df.shape)"
+    "df"
    ],
    "id": "87fc95689367386d",
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "No such file or directory (os error 2): ...mak/OS/example_data_week8/output/extract/20241029_week8_project_0_IMG_0000_1.tif.parquet",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 7\u001B[0m\n\u001B[1;32m      4\u001B[0m file_path \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mr\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m/run/media/mak/OS/example_data_week8/output/extract/20241029_week8_project_0_IMG_0000_1.tif.parquet\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;66;03m# Load the Parquet file into a Polars DataFrame\u001B[39;00m\n\u001B[0;32m----> 7\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mpl\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_parquet\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfile_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;66;03m# Display the first few rows\u001B[39;00m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28mprint\u001B[39m(df\u001B[38;5;241m.\u001B[39mhead(\u001B[38;5;241m2\u001B[39m))\n",
-      "File \u001B[0;32m~/.conda/envs/UAV-2/lib/python3.12/site-packages/polars/_utils/deprecation.py:92\u001B[0m, in \u001B[0;36mdeprecate_renamed_parameter.<locals>.decorate.<locals>.wrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m     87\u001B[0m \u001B[38;5;129m@wraps\u001B[39m(function)\n\u001B[1;32m     88\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21mwrapper\u001B[39m(\u001B[38;5;241m*\u001B[39margs: P\u001B[38;5;241m.\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs: P\u001B[38;5;241m.\u001B[39mkwargs) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m T:\n\u001B[1;32m     89\u001B[0m     _rename_keyword_argument(\n\u001B[1;32m     90\u001B[0m         old_name, new_name, kwargs, function\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__qualname__\u001B[39m, version\n\u001B[1;32m     91\u001B[0m     )\n\u001B[0;32m---> 92\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfunction\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.conda/envs/UAV-2/lib/python3.12/site-packages/polars/_utils/deprecation.py:92\u001B[0m, in \u001B[0;36mdeprecate_renamed_parameter.<locals>.decorate.<locals>.wrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m     87\u001B[0m \u001B[38;5;129m@wraps\u001B[39m(function)\n\u001B[1;32m     88\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21mwrapper\u001B[39m(\u001B[38;5;241m*\u001B[39margs: P\u001B[38;5;241m.\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs: P\u001B[38;5;241m.\u001B[39mkwargs) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m T:\n\u001B[1;32m     89\u001B[0m     _rename_keyword_argument(\n\u001B[1;32m     90\u001B[0m         old_name, new_name, kwargs, function\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__qualname__\u001B[39m, version\n\u001B[1;32m     91\u001B[0m     )\n\u001B[0;32m---> 92\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfunction\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.conda/envs/UAV-2/lib/python3.12/site-packages/polars/io/parquet/functions.py:244\u001B[0m, in \u001B[0;36mread_parquet\u001B[0;34m(source, columns, n_rows, row_index_name, row_index_offset, parallel, use_statistics, hive_partitioning, glob, schema, hive_schema, try_parse_hive_dates, rechunk, low_memory, storage_options, credential_provider, retries, use_pyarrow, pyarrow_options, memory_map, include_file_paths, allow_missing_columns)\u001B[0m\n\u001B[1;32m    241\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m    242\u001B[0m         lf \u001B[38;5;241m=\u001B[39m lf\u001B[38;5;241m.\u001B[39mselect(columns)\n\u001B[0;32m--> 244\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mlf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcollect\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.conda/envs/UAV-2/lib/python3.12/site-packages/polars/lazyframe/frame.py:2065\u001B[0m, in \u001B[0;36mLazyFrame.collect\u001B[0;34m(self, type_coercion, _type_check, predicate_pushdown, projection_pushdown, simplify_expression, slice_pushdown, comm_subplan_elim, comm_subexpr_elim, cluster_with_columns, collapse_joins, no_optimization, streaming, engine, background, _check_order, _eager, **_kwargs)\u001B[0m\n\u001B[1;32m   2063\u001B[0m \u001B[38;5;66;03m# Only for testing purposes\u001B[39;00m\n\u001B[1;32m   2064\u001B[0m callback \u001B[38;5;241m=\u001B[39m _kwargs\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpost_opt_callback\u001B[39m\u001B[38;5;124m\"\u001B[39m, callback)\n\u001B[0;32m-> 2065\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m wrap_df(\u001B[43mldf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcollect\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcallback\u001B[49m\u001B[43m)\u001B[49m)\n",
-      "\u001B[0;31mFileNotFoundError\u001B[0m: No such file or directory (os error 2): ...mak/OS/example_data_week8/output/extract/20241029_week8_project_0_IMG_0000_1.tif.parquet"
-     ]
+     "data": {
+      "text/plain": [
+       "shape: (0, 20)\n",
+       "┌─────┬─────┬──────┬───────┬───┬──────┬─────────┬─────┬──────┐\n",
+       "│ Xw  ┆ Yw  ┆ elev ┆ band1 ┆ … ┆ ycam ┆ sunelev ┆ saa ┆ path │\n",
+       "│ --- ┆ --- ┆ ---  ┆ ---   ┆   ┆ ---  ┆ ---     ┆ --- ┆ ---  │\n",
+       "│ f32 ┆ f32 ┆ f32  ┆ u16   ┆   ┆ f32  ┆ f32     ┆ f32 ┆ str  │\n",
+       "╞═════╪═════╪══════╪═══════╪═══╪══════╪═════════╪═════╪══════╡\n",
+       "└─────┴─────┴──────┴───────┴───┴──────┴─────────┴─────┴──────┘"
+      ],
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (0, 20)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Xw</th><th>Yw</th><th>elev</th><th>band1</th><th>band2</th><th>band3</th><th>delta_z</th><th>delta_x</th><th>delta_y</th><th>distance_xy</th><th>angle_rad</th><th>vza</th><th>vaa_rad</th><th>vaa_temp</th><th>vaa</th><th>xcam</th><th>ycam</th><th>sunelev</th><th>saa</th><th>path</th></tr><tr><td>f32</td><td>f32</td><td>f32</td><td>u16</td><td>u16</td><td>u16</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>str</td></tr></thead><tbody></tbody></table></div>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 45
   },
   {
    "metadata": {},
