--- a/Documentation/Optimisation_Changes/Journal of improvements.ipynb
+++ b/Documentation/Optimisation_Changes/Journal of improvements.ipynb
@@ -15,12 +15,8 @@
    "source": [
     "import numpy as np\n",
     "import rasterio as rio\n",
-    "from matplotlib.patches import Polygon\n",
     "from rasterio.transform import from_origin\n",
-    "from tqdm import tqdm\n",
-    "import timeit\n",
-    "\n",
-    "from Optimisation_Changes.testing import polygon\n"
+    "import timeit\n"
    ]
   },
   {
@@ -371,23 +367,10 @@
     "    }\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "import pandas as pd\n",
-    "import glob\n",
-    "import os\n",
-    "import logging\n",
-    "from smac_functions import *\n",
-    "from config_object import config\n",
-    "from functools import reduce, partial\n",
-    "import numpy as np\n",
-    "from joblib import Parallel, delayed\n",
+    "from Documentation.Optimisation_Changes.smac_functions import *\n",
     "from tqdm import tqdm\n",
     "import rasterio as rio\n",
-    "import math\n",
     "import tqdm\n",
-    "import exiftool\n",
-    "from pathlib import Path, PureWindowsPath\n",
     "from timeit import default_timer as timer\n",
     "\n",
     "\n",
@@ -479,10 +462,9 @@
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
+    "\n",
     "import polars as pl\n",
     "import numpy as np\n",
-    "import math\n",
     "import time\n",
     "import logging\n",
     "from functools import reduce\n",
